fixed collapse card toggle on med/large

--- a/src/faq.css
+++ b/src/faq.css
@@ -123,12 +123,14 @@
 
     .collapse-wrapper {
         height: min-content;
-        max-width: calc((64rem / 2) - 3rem);
         margin: 0 1rem 1rem 1rem;
+        max-width: calc((64rem / 2) - 3rem);
+        width: 45%;
     }
 
     .collapse-wrapper .toggle {
         margin-left: 1rem;
-        max-width: calc((64rem / 2) - 3rem);
+        max-width: calc((64rem / 2) - 4rem);
+        width: 42%;
     }
 }
